<resources>
    <string name="app_name">Flix</string>
    <string name="popular">Popular</string>
    <string name="trends">Trends</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="error">Error</string>
    <string name="internet_connection">Internet connection is not available</string>
    <string name="top_rated">Top Rated</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="videos">Videos</string>
    <string name="recommends">Recommendations</string>
    <string name="no_video_available">No videos available.</string>
    <string name="no_reviews_available">No reviews available.</string>
    <string name="loading_wait">Loading,Please wait...</string>
    <string name="favourite">FAVOURITES</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_favourite">Clear entire cache powering offline state of this application including existing database.Are you sure want to clear favourites?</string>
    <string name="titile_clear_fav">Clear cache</string>
    <string name="title_about">About</string>
    <string name="title_version">Version</string>
    <string name="title_licence">Licence</string>
    <string name="no_favourites">No Favourites available.</string>
    <string name="add_to_favourites">This movie is added successfully to your favourite movie list.</string>
    <string name="add_to_people_favourites">This people is added successfully to your favourite people list.</string>
    <string name="remove_to_favourites">Movie is removed successfully from your wishlist.</string>
    <string name="remove_to_people_favourites">People is removed successfully from your wishlist.</string>
    <string name="unable_load_movies">Unable to load movies.</string>
    <string name="wait_data_loaded">Please wait for a while, %s data is being loaded.</string>
    <string name="search">Search</string>
    <string name="search_movies">Search Movies</string>
    <string name="search_tv_shows">Search TV Shows</string>
    <string name="search_people">Search People</string>
    <string name="retry">Retry</string>
    <string name="message_about"><b>Flix</b> is a minimalistic movie catalog application through which you can view popular as well as top rated movies.\n\nDeveloper: <b>Kajal Mittal</b>\n\nContact: <b>kajal9878@gmail.com</b>\n\nIcon made by Freepik from www.flaticon.com</string>
    <string name="message_licence">

    </string>
    <string name="movies">MOVIES</string>
    <string name="tv_shows">TV SHOWS</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_tv">Currently On TV</string>
    <string name="navigation_drawer_open">Drawer open</string>
    <string name="navigation_drawer_close">Drawer closed</string>
    <string name="unable_load_tv">Unable to load TV shows.</string>
    <string name="add_to_favourites_tv">This show is added successfully to your favourite shows list</string>
    <string name="remove_to_fav_show">Show is removed successfully from your wishlist.</string>
    <string name="latest">Latest</string>
    <string name="people">People</string>
    <string name="desc_clear_fav">Clear entire cache powering offline state of this application.</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="no_similar_movies_available">No similar movies available.</string>
    <string name="title_activity_people_details">PeopleDetailsActivity</string>
    <string name="popularity">Popularity</string>
    <string name="tv_known_for">Known For</string>
    <string name="biography">Biography</string>
    <string name="similar_tv_shows">Similar TV Shows</string>
    <string name="no_biography_available">No biography available.</string>
    <string name="unable_load_people">Unable to load peoples.</string>
    <string name="no_known_available">No known movies available.</string>
    <string name="peoples">PEOPLES</string>
    <string name="cast">Cast</string>
    <string name="no_cast_available">No casting available.</string>
</resources>