<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kmdev.flix.ui.activities.MovieDetailsActivity"
    tools:showIn="@layout/activity_movie_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.FontPath.BOLD"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16dp" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/reviews"
            android:textAppearance="@style/TextAppearance.FontPath.BOLD"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16dp" />

        <FrameLayout
            android:id="@+id/frame_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_loading_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_4dp"
                    android:text="@string/loading_wait"

                    android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/no_reviews_available"

                android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                android:textSize="@dimen/dp_15"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/videos"
            android:textAppearance="@style/TextAppearance.FontPath.BOLD"

            android:textColor="@color/black"
            android:textSize="@dimen/dp_16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progress_bar_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_loading_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_wait"
                        android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_15"
                        android:visibility="gone" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/no_video_available"
                android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                android:textSize="@dimen/dp_15"

                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_similar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/similar_movies"
            android:textAppearance="@style/TextAppearance.FontPath.BOLD"

            android:textColor="@color/black"
            android:textSize="@dimen/dp_16dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progress_bar_movies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_loading_movies"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/loading_wait"
                        android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp_15"
                        android:visibility="gone" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_similar_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_similar_movies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/no_similar_movies_available"
                android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                android:textSize="@dimen/dp_15"

                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/cast"
            android:textAppearance="@style/TextAppearance.FontPath.BOLD"
            android:textColor="@color/black"
            android:textSize="@dimen/dp_16dp" />

        <FrameLayout
            android:id="@+id/frame_cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_loading_cast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_4dp"
                    android:text="@string/loading_wait"

                    android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin" />

            <TextView
                android:id="@+id/tv_no_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/no_cast_available"
                android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                android:textSize="@dimen/dp_15"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_cast_tvshows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar_cast_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_loading_cast_shows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_4dp"
                    android:text="@string/loading_wait"
                    android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                    android:textColor="@color/black"
                    android:visibility="gone" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_cast_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin" />

            <TextView
                android:id="@+id/tv_no_cast_shows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/no_cast_available"
                android:textAppearance="@style/TextAppearance.FontPath.REGULAR"
                android:textSize="@dimen/dp_15"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
